ci: restructure frontend/backend workflows (test-first, coverage output), add env var prep; feat: secrets manager supports file-based secret input; chore: docker build scripts & .dockerignore adjustments

--- a/dockerfiles/frontend/.dockerignore
+++ b/dockerfiles/frontend/.dockerignore
@@ -78,10 +78,10 @@ README.md
 *.md
 docs/
 
-# Package manager
+# Package manager (keep lockfiles for reproducible/cached Docker layer installs)
 package-lock.json
 yarn.lock
-pnpm-lock.yaml
+# pnpm-lock.yaml intentionally kept (do NOT ignore)
 
 # ESLint
 .eslintcache
